update: theme style

--- a/theme/components/announcement/index.module.scss
+++ b/theme/components/announcement/index.module.scss
@@ -40,3 +40,19 @@
       background-color: rgba(255, 255, 255, 0.3);
     }
 }
+
+@media screen and (max-width: 600px) {
+  .bar {
+    height: auto;
+    max-height: 80px;
+    overflow-y: auto;
+    .link {
+      margin: 10px 28px;
+      font-size: 14px;
+      margin-right: 28px;
+    }
+    .close {
+      right: 0.5rem;
+    }
+  }
+}
