--- a/theme/components/Home/Hero/index.module.scss
+++ b/theme/components/Home/Hero/index.module.scss
@@ -54,6 +54,19 @@
         justify-content: center;
         gap: 10px;
         margin-top: 20px;
+        .get-started {
+            background: #F66B24;
+            color: #fff;
+            padding: 8px 20px;
+            border-radius: 10px;
+            font-size: 16px;
+            font-weight: 650;
+            cursor: pointer;
+            transition: all 0.3s;
+            &:hover {
+                background: #f77c3d;
+            }
+        }
     }
 
   }
@@ -82,6 +95,12 @@
             .description {
                 line-height: 20px;
                 font-size: 16px !important;
+            }
+
+            .button-group {
+                .get-started {
+                    font-size: 14px !important;
+                }
             }
         }
     }
